--- a/src/app/partie/confirmation-partie/confirmation-partie.component.html
+++ b/src/app/partie/confirmation-partie/confirmation-partie.component.html
@@ -19,8 +19,8 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <div class="p-grid p-nogutter p-justify-between">
-        <p-button label="Back" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
-        <p-button label="Complete" (onClick)="complete()" icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
+        <p-button label="Précédent" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
+        <p-button label="Créer la partie" (onClick)="complete()" icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
       </div>
     </ng-template>
   </p-card>
