--- a/src/app/partie/nombre-parties/nombre-parties.component.html
+++ b/src/app/partie/nombre-parties/nombre-parties.component.html
@@ -15,8 +15,8 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <div class="p-grid p-nogutter p-justify-end">
-        <p-button label="Back" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
-        <p-button label="Next" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right"></p-button>
+        <p-button label="Précédent" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
+        <p-button label="Suivant" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right"></p-button>
       </div>
     </ng-template>
   </p-card>
