--- a/src/app/partie/selection-joueurs/selection-joueurs.component.html
+++ b/src/app/partie/selection-joueurs/selection-joueurs.component.html
@@ -15,7 +15,7 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <div class="p-grid p-nogutter p-justify-end">
-        <p-button label="Next" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right" [disabled]="validStep"></p-button>
+        <p-button label="Suivant" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right" [disabled]="validStep"></p-button>
       </div>
     </ng-template>
   </p-card>
