--- a/src/app/partie/partie.component.html
+++ b/src/app/partie/partie.component.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 1.6em">
-  <p-toast></p-toast>
-  <p-steps [model]="steps" [readonly]="false"></p-steps>
+  <p-toast key="message"></p-toast>
+  <p-steps [model]="steps" [readonly]="true"></p-steps>
   <router-outlet></router-outlet>
 </div>
