--- a/src/app/partie/confirmation-partie/confirmation-partie.component.html
+++ b/src/app/partie/confirmation-partie/confirmation-partie.component.html
@@ -18,7 +18,7 @@
 
     </ng-template>
     <ng-template pTemplate="footer">
-      <div class="p-grid p-nogutter p-justify-between">
+      <div class="p-grid p-nogutter flex">
         <p-button label="Précédent" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
         <p-button label="Créer la partie" (onClick)="complete()" icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
       </div>
