--- a/src/app/partie/nombre-parties/nombre-parties.component.html
+++ b/src/app/partie/nombre-parties/nombre-parties.component.html
@@ -14,7 +14,7 @@
       </div>
     </ng-template>
     <ng-template pTemplate="footer">
-      <div class="p-grid p-nogutter p-justify-end">
+      <div class="p-grid p-nogutter flex">
         <p-button label="Précédent" (onClick)="prevPage()" icon="pi pi-angle-left"></p-button>
         <p-button label="Suivant" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right"></p-button>
       </div>
