--- a/src/app/partie/nombre-parties/nombre-parties.component.html
+++ b/src/app/partie/nombre-parties/nombre-parties.component.html
@@ -1,10 +1,10 @@
 <div class="stepsdemo-content">
   <p-card>
     <ng-template pTemplate="title">
-      Nombre de parties de la session
+      Nombre de manches de la partie
     </ng-template>
     <ng-template pTemplate="subtitle">
-      Choisissez un nombre de parties qui vont composer la session de Wist
+      Choisissez un nombre de manches qui vont composer la session de Wist
     </ng-template>
     <ng-template pTemplate="content">
       <div class="p-fluid" [formGroup]="form">
