--- a/src/app/partie/confirmation-partie/confirmation-partie.component.html
+++ b/src/app/partie/confirmation-partie/confirmation-partie.component.html
@@ -11,7 +11,7 @@
         <p><b><u>Joueurs</u></b></p>
         <p-listbox [options]="newGameResume.players" optionLabel="name" [disabled]="true"></p-listbox>
         <p><b><u>Nombre de parties</u></b></p>
-        <p>{{newGameResume.gameNumbers}}</p>
+        <p>{{newGameResume.framesNumber}}</p>
       </div>
 
     </ng-template>
