--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -1,1 +1,3 @@
-<p>partie-en-cours works!</p>
+<p-card header="Partie du {{currentGame?.created | date : 'dd MMMM'}}" [style]="{width: '100%', margin: '0 auto'}" styleClass="p-card-shadow">
+
+</p-card>
