Add frame + fix model

--- a/src/app/partie/confirmation-partie/confirmation-partie.component.html
+++ b/src/app/partie/confirmation-partie/confirmation-partie.component.html
@@ -10,7 +10,7 @@
       <div class="p-field p-col-12">
         <p><b><u>Joueurs</u></b></p>
         <p-listbox [options]="newGameResume.players" optionLabel="name" [disabled]="true"></p-listbox>
-        <p><b><u>Nombre de parties</u></b></p>
+        <p><b><u>Nombre de manches</u></b></p>
         <p>{{newGameResume.framesNumber}}</p>
       </div>
 
