--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -1,13 +1,18 @@
 <ng-container *ngIf="currentGame">
-  <p-card header="Partie du {{currentGame?.created | date : 'dd MMMM'}}" [style]="{width: '100%', margin: '0 auto'}"
+  <p-card header="Partie du {{currentGame.created | date : 'dd MMMM'}}" [style]="{width: '100%', margin: '0 auto'}"
           styleClass="p-card-shadow">
     <h3>Manches</h3>
     <p-knob [(ngModel)]="currentGame.currentFrame" [max]="currentGame.framesNumber" name="Nombre de manches jouées"
             valueTemplate="{value}/{{currentGame.framesNumber}}">
 
     </p-knob>
-    <h3>Sélection du donneur</h3>
+    <ng-container *ngIf="currentGame.currentFrame === 0">
+      <h3>Sélection du donneur</h3>
+      <p-selectButton [options]="currentGame.players" optionLabel="name" (onChange)="setDealer($event)"></p-selectButton>
+      <br/>
+      <p-button label="lancer la première manche" [disabled]="!dealer" (onClick)="launchFrame()" icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
 
+    </ng-container>
 
   </p-card>
 </ng-container>
