--- a/src/app/partie/frame/frame.component.css
+++ b/src/app/partie/frame/frame.component.css
@@ -2,6 +2,11 @@
   margin-top: 1.6em;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+
+button {
+  margin: 0 0.7em;
+  padding: 0.7em;
 }
