--- a/src/app/partie/frame/frame.component.html
+++ b/src/app/partie/frame/frame.component.html
@@ -2,25 +2,30 @@
   <ng-container *ngIf="players">
     <h3 *ngIf="dealer">Donneur : {{dealer.name}}</h3>
     <ng-container *ngIf="form">
-      <div class="p-fluid" [formGroup]="form">
+      <form class="p-fluid" [formGroup]="form" (submit)="success()">
+        <h4>Sélection du donneur</h4>
+        <div class="p-field">
+          <p-selectButton [options]="players" optionLabel="name" formControlName="dealer"
+          ></p-selectButton>
+        </div>
         <h4>Type de jeu</h4>
         <p-treeSelect [options]="typesGame" formControlName="typeGame" selectionMode="single"></p-treeSelect>
         <app-info-points-partie [data]="getInfoPoints()"></app-info-points-partie>
 
         <h4>Joueur(s)</h4>
         <div class="p-field" *ngIf="isAlone()">
-          <p-dropdown [options]="players" optionLabel="name" formControlName="players"></p-dropdown>
+          <p-dropdown [options]="players" optionLabel="name" formControlName="players" placeholder="Sélection du joueur" ></p-dropdown>
         </div>
         <div class="p-field" *ngIf="!isAlone()">
           <p-multiSelect inputId="player" [options]="players"  (onChange)="checkValidity()" optionLabel="name"
-                         placeholder="" formControlName="players"></p-multiSelect>
+                         placeholder="Sélection des 2 joueurs" formControlName="players"></p-multiSelect>
         </div>
         <div class="buttons">
-          <p-button label="Réussite" icon="pi pi-check-circle" iconPos="right" styleClass="p-button-success" (click)="success()" [disabled]="!form.valid"></p-button>
-          <p-button label="Echec" icon="pi pi-times-circle" iconPos="right" styleClass="p-button-danger"></p-button>
+          <button pButton label="Réussite" icon="pi pi-check-circle" iconPos="right" class="p-button-outlined p-button-success" [disabled]="form.invalid"></button>
+          <button pButton label="Echec" icon="pi pi-times-circle" iconPos="right" class="p-button-outlined p-button-danger" [disabled]="form.invalid"></button>
 
         </div>
-      </div>
+      </form>
     </ng-container>
   </ng-container>
 </p-card>
