--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -8,16 +8,16 @@
 
     </p-knob>
     <ng-container *ngIf="currentGame.currentFrame === 0">
-      <h3>Sélection du donneur</h3>
-      <p-selectButton [options]="currentGame.players" optionLabel="name"
-                      (onChange)="setDealer($event)"></p-selectButton>
-      <br/>
-      <p-button label="lancer la première manche" [disabled]="!dealer" (onClick)="launchFrame()"
+<!--      <h3>Sélection du donneur</h3>-->
+<!--      <p-selectButton [options]="currentGame.players" optionLabel="name"-->
+<!--                      (onChange)="setDealer($event)"></p-selectButton>-->
+<!--      <br/>-->
+      <p-button label="lancer la première manche" (onClick)="launchFrame()"
                 icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
 
     </ng-container>
     <app-totaux-partie *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-totaux-partie>
-    <app-frame *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames" [dealer]="dealer"></app-frame>
+    <app-frame *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-frame>
 
     <router-outlet></router-outlet>
   </p-card>
