--- a/src/app/partie/partie-en-cours/info-points-partie/info-points-partie.component.html
+++ b/src/app/partie/partie-en-cours/info-points-partie/info-points-partie.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-content-between justify-content-between text-center" *ngIf="data">
+<div class="flex justify-content-between text-center" *ngIf="data">
   <div class="p-sm-6 p-md-6 p-col-3 text-justify">
     <h5>Joueur actif</h5>
     <div class="flex-grow-1 align-items-center justify-content-around">
