--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -1,12 +1,19 @@
 <ng-container *ngIf="currentGame">
   <p-card header="Partie du {{currentGame.created | date : 'dd MMMM YYYY'}}" [style]="{width: '100%', margin: '0 auto'}"
           styleClass="p-card-shadow">
+    <div class="flex justify-content-between">
+      <div>
+        <h3>Manches</h3>
+        <p-knob [(ngModel)]="currentGame.currentFrame" [max]="currentGame.framesNumber" name="Nombre de manches jouées"
+                valueTemplate="{value}/{{currentGame.framesNumber}}">
 
-    <h3>Manches</h3>
-    <p-knob [(ngModel)]="currentGame.currentFrame" [max]="currentGame.framesNumber" name="Nombre de manches jouées"
-            valueTemplate="{value}/{{currentGame.framesNumber}}">
+        </p-knob>
+      </div>
+      <div>
+        <app-totaux-partie *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-totaux-partie>
+      </div>
+    </div>
 
-    </p-knob>
     <ng-container *ngIf="currentGame.currentFrame === 0">
 <!--      <h3>Sélection du donneur</h3>-->
 <!--      <p-selectButton [options]="currentGame.players" optionLabel="name"-->
@@ -16,7 +23,6 @@
                 icon="pi pi-angle-right" iconPos="right" styleClass="p-button-success"></p-button>
 
     </ng-container>
-    <app-totaux-partie *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-totaux-partie>
     <app-frame *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-frame>
 
     <router-outlet></router-outlet>
