--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="currentGame">
   <p-card header="Partie du {{currentGame.created | date : 'dd MMMM YYYY'}}" [style]="{width: '100%', margin: '0 auto'}"
           styleClass="p-card-shadow">
-    <div class="flex justify-content-between">
+    <div class="flex justify-content-around">
       <div>
         <h3>Manches</h3>
         <p-knob [(ngModel)]="currentGame.currentFrame" [max]="currentGame.framesNumber" name="Nombre de manches jouées"
@@ -10,7 +10,7 @@
         </p-knob>
       </div>
       <div>
-        <app-totaux-partie *ngIf="showGame" [players]="currentGame.players" [frames]="currentGame.frames"></app-totaux-partie>
+        <app-totaux-partie *ngIf="showGame" [players]="players" [frames]="currentGame.frames"></app-totaux-partie>
       </div>
     </div>
 
