--- a/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
+++ b/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
@@ -1,11 +1,14 @@
-<p-table [value]="frames" responsiveLayout="scroll" [resizableColumns]="true">
+<p-table [value]="frames" responsiveLayout="scroll" [resizableColumns]="true" >
   <ng-template pTemplate="header">
       <tr>
-        <th *ngFor="let p of players">{{p.name}}</th>
-        <th>Total</th>
+        <th></th>
+        <th>Points</th>
       </tr>
   </ng-template>
   <ng-template pTemplate="body" let-frame>
-
+    <tr *ngFor="let p of players">
+      <td>{{p.player.name}}</td>
+      <td>{{p.result}}</td>
+    </tr>
   </ng-template>
 </p-table>
