--- a/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
+++ b/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
@@ -1,7 +1,9 @@
 <p-table [value]="frames" responsiveLayout="scroll" [resizableColumns]="true" >
   <ng-template pTemplate="header">
       <tr>
-        <th></th>
+        <th>
+          <button pButton icon="pi pi-chart-line" iconPos="right" class="p-button-rounded p-button-secondary p-button-text" ></button>
+        </th>
         <th>Points</th>
       </tr>
   </ng-template>
