--- a/src/app/partie/frame/frame.component.html
+++ b/src/app/partie/frame/frame.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="players">
     <h3 *ngIf="dealer">Donneur : {{dealer.name}}</h3>
     <ng-container *ngIf="form">
-      <form class="p-fluid" [formGroup]="form" (submit)="success($event)">
+      <form class="p-fluid" [formGroup]="form" (submit)="submit($event)">
         <h4>Sélection du donneur</h4>
         <div class="p-field">
           <p-selectButton [options]="players" optionLabel="name" formControlName="dealer"
