fix display partie-en-cours.component

--- a/src/app/partie/frame/frame.component.html
+++ b/src/app/partie/frame/frame.component.html
@@ -1,4 +1,4 @@
-<p-card subheader="Manche {{index}}">
+<div>
   <ng-container *ngIf="players">
     <h3 *ngIf="dealer">Donneur : {{dealer.name}}</h3>
     <ng-container *ngIf="form">
@@ -62,4 +62,4 @@
     </ng-template>
   </p-dialog>
 
-</p-card>
+</div>
