--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -1,13 +1,14 @@
 <ng-container *ngIf="currentGame">
   <p-card header="Partie du {{currentGame.created | date : 'dd MMMM YYYY'}}" [style]="{width: '100%', margin: '0 auto'}"
-          styleClass="p-card-shadow">
+          styleClass="p-card-shadow custom" >
     <div class="flex justify-content-around">
-      <div>
+      <div class="text-center">
         <h3>Manches</h3>
         <p-knob [(ngModel)]="currentGame.currentFrame" [max]="currentGame.framesNumber" name="Nombre de manches jouées"
                 valueTemplate="{value}/{{currentGame.framesNumber}}">
 
         </p-knob>
+        <h4>Manche {{currentGame.currentFrame}} en cours</h4>
       </div>
       <div>
         <app-totaux-partie *ngIf="showGame" [players]="players" [frames]="currentGame.frames" ></app-totaux-partie>
