--- a/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
+++ b/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
@@ -10,7 +10,7 @@
   <ng-template pTemplate="body" let-p>
     <tr>
       <td>{{p.player.name}}</td>
-      <td>{{p.score}}</td>
+      <td class="score">{{p.score}}</td>
     </tr>
   </ng-template>
 </p-table>
