--- a/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
+++ b/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
@@ -3,6 +3,8 @@
       <tr>
         <th>
           <button pButton icon="pi pi-chart-line" iconPos="right" class="p-button-rounded p-button-secondary p-button-text" ></button>
+          <button *ngIf="checkIfDataValid()" pButton type="button" icon="pi pi-check" [disabled]="true" class="p-button-success p-button-text"></button>
+          <button *ngIf="!checkIfDataValid()" pButton type="button" icon="pi pi-exclamation-triangle" [disabled]="true" class="p-button-danger p-button-text"></button>
         </th>
         <th>Points</th>
       </tr>
@@ -14,3 +16,5 @@
     </tr>
   </ng-template>
 </p-table>
+
+
