--- a/src/app/partie/partie-en-cours/partie-en-cours.component.html
+++ b/src/app/partie/partie-en-cours/partie-en-cours.component.html
@@ -19,6 +19,7 @@
                [players]="currentGame.players"
                [endGame]="endGame"
                [frames]="currentGame.frames"
+               [endGameResults]="resultEndGamePlayers"
                (sendOutputData)="collectOutputData($event)"
                (sendEndGame)="collectSendEndData($event)"
              ></app-frame>
