--- a/src/app/partie/frame/frame.component.html
+++ b/src/app/partie/frame/frame.component.html
@@ -13,12 +13,16 @@
         <app-info-points-partie [data]="getInfoPoints()"></app-info-points-partie>
 
         <h4>Joueur(s)</h4>
+<!--        <div class="p-field">-->
+<!--          <p-selectButton [options]="framePlayers" optionLabel="name" formControlName="players" [multiple]="!isAlone()"-->
+<!--          ></p-selectButton>-->
+<!--        </div>-->
         <div class="p-field" *ngIf="isAlone()">
-          <p-dropdown [options]="framePlayers" optionLabel="name" formControlName="players" placeholder="Sélection du joueur" ></p-dropdown>
+          <p-dropdown [options]="framePlayers" optionLabel="name" formControlName="players" placeholder="Sélection du joueur"></p-dropdown>
         </div>
         <div class="p-field" *ngIf="!isAlone()">
-          <p-multiSelect inputId="player" [options]="framePlayers"  (onChange)="checkValidity()" optionLabel="name"
-                         placeholder="Sélection des 2 joueurs" formControlName="players"></p-multiSelect>
+          <p-listbox [options]="framePlayers"  (onChange)="checkValidity()" optionLabel="name"
+                         [multiple]="true" [metaKeySelection]="false" [checkbox]="true" formControlName="players"></p-listbox>
         </div>
         <div class="buttons" *ngIf="!checkIfOpenExtraPointDialog(form)">
           <button pButton label="Réussite" icon="pi pi-check-circle" iconPos="right" class="p-button-outlined p-button-success" [disabled]="form.invalid" ></button>
@@ -70,21 +74,21 @@
         <ng-template pTemplate="header">
           <tr>
             <th>Nom</th>
-            <th>Points Totaux</th>
-            <th>Points gagnés</th>
+            <th>Total</th>
+            <th>Points</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-result>
           <tr>
             <td>{{result.player.name}}</td>
-            <td>{{result.player.totalPoints}}</td>
-            <td>{{result.score}}</td>
+            <td>{{result.player.totalPoints + result.score}}</td>
+            <td>+ {{result.score}}</td>
           </tr>
         </ng-template>
       </p-table>
     </div>
     <ng-template pTemplate="footer">
-      <div class="p-fluid">
+      <div class="flex-grow-1">
         <button pButton label="Terminer" icon="pi pi-check-circle" iconPos="right" class="p-button-outlined p-button-secondary" (click)="end()" ></button>
       </div>
     </ng-template>
