--- a/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
+++ b/src/app/partie/partie-en-cours/totaux-partie/totaux-partie.component.html
@@ -2,7 +2,7 @@
   <ng-template pTemplate="header">
       <tr>
         <th>
-          <button pButton icon="pi pi-chart-line" iconPos="right" class="p-button-rounded p-button-secondary p-button-text" ></button>
+          <button pButton icon="pi pi-chart-line" (click)="openGameDataDialog()" iconPos="right" class="p-button-rounded p-button-secondary p-button-text" ></button>
           <button *ngIf="checkIfDataValid()" pButton type="button" icon="pi pi-check" [disabled]="true" class="p-button-success p-button-text"></button>
           <button *ngIf="!checkIfDataValid()" pButton type="button" icon="pi pi-exclamation-triangle" [disabled]="true" class="p-button-danger p-button-text"></button>
         </th>
@@ -16,5 +16,26 @@
     </tr>
   </ng-template>
 </p-table>
+<p-dialog [(visible)]="showGameDataDialog" [style]="{width: '100vw', height: '100vh'}" [baseZIndex]="10000">
+  <ng-template pTemplate="header">
+    <h3 style="font-weight: 600">Info de la partie</h3>
+  </ng-template>
+  <div>
+    <p-table [value]="frames" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+        <tr>
+          <th *ngFor="let col of players">{{col.player.name}}</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-frame>
+        <tr>
+          <td *ngFor="let info of frame.framePlayerResultList">
+            {{info.score}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</p-dialog>
 
 
