--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
 
 }
 .infos-card {
