--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,6 +40,9 @@
 
     </p-card>
     <p-card header="Dernière partie" subheader="{{latestPlayedGame?.created | date : 'd MMM yyyy'}}" class="infos-card" *ngIf="latestPlayedGame">
+      <ng-template pTemplate="footer">
+        <h3>{{displayGameState(gameStatusChecked)}}</h3>
+      </ng-template>
       <p-chart type="line" [data]="latestPlayedGameData" [options]="latestPlayedGameOptions"></p-chart>
     </p-card>
   </div>
